welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: not found: value res
  res (i)=getCouleurSol();
  ^Array1:9: error: not found: value res
	return res;
               ^